--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "backup_dir": "C:/Users/YourUser/minecraft-server/backups",
   "world_dir": "C:/Users/YourUser/minecraft-server/Latest/worlds",
   "network_share": "\\\\YourNAS\\MinecraftBackups",
-  "download_url": "https://www.minecraft.net/bedrockdedicatedserver/bin-win/",
+  "changelog_url": "https://feedback.minecraft.net/hc/en-us/sections/360001186971-Release-Changelogs",
+  "download_url": "https://www.minecraft.net/en-us/download/server/bedrock",
   "last_version_file": "C:/Users/YourUser/minecraft-server/last_version.txt"
 }
